style: spot-ws-api review cleanup
TestVerificationController:
- Replace 3 parallel arrays with record CpuMetric(name, historyKey,
  currentKey) — eliminates manual index alignment risk
- Use descendingMap() instead of sort + reverse for TPS history
- Inline formatPercent() (single-use, trivial)
- Simplify parseCpuMask with bit-shift loop
- Use .formatted() consistently instead of String.format()
- Remove redundant "semantic" and "type" fields from GC pause info

WsSessionManager.sendMessage():
- Move empty-list check inside try-finally block so data.release()
  is always handled by the finally clause (safer resource lifecycle)

WalWriter.onStop():
- Log shutdown drain errors instead of silently swallowing

WsCommandInboundHandler:
- Replace wildcard import open.vincentf13.service.spot.sbe.* with
  4 explicit encoder imports

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>